# bigdata

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .slugignore  AUDIT.md  CLEANUP_CANDIDATES.md  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
api/: data_loader.py  feature_builder.py  main.py  model_loader.py  requirements.txt  schemas.py
archive/old_models/: 2026-04-18_baseline_xgb.pkl  2026-04-18_federated_model.pt  2026-04-18_graphsage.pt
data/: README.md  fairness_report.json  federated_report.json
demo/: narration.aiff  narration_script.txt
docs/: data.md  methodology.md  model_card.md  project_brief.md
models/: README.md  baseline_xgb.threshold.json  graphsage.meta.json  hybrid_ensemble.threshold.json  score_percentiles.npy
notebooks/: 01_EDA_graph_construction.ipynb  01_generate_data.ipynb  02_baseline_model.ipynb  02_feature_engineering.ipynb  03_gnn_training.ipynb  03_train_baseline.ipynb  04_hybrid_ensemble.ipynb  04_train_gnn.ipynb  05_fairness_audit.ipynb  05_train_hybrid.ipynb  06_explainability_cold_start.ipynb  06_federated_simulation.ipynb
notebooks/exploratory/: 02_baseline_model.ipynb  03_gnn_training.ipynb  04_hybrid_ensemble.ipynb  05_fairness_audit.ipynb  06_explainability_cold_start.ipynb
notebooks/pipeline/: 01_generate_data.ipynb  02_feature_engineering.ipynb  03_train_baseline.ipynb  04_train_gnn.ipynb  05_train_hybrid.ipynb  (+1 more)
reports/: fairness_report.json  fairness_summary.csv  federated_report.json  hybrid_sample_shap_breakdown.csv  hybrid_training_eval_history.csv
scripts/: generate_executive_assets.py  write_roadmap_notebooks.py
src/: cold_start.py  fairness_audit.py  feature_engineering.py  federated_training.py  generate_data.py  train_baseline.py  train_gnn.py  train_hybrid.py
tests/: test_api_manual_traceability.py
(+70 files in other folders)
